# UpperCtrlSystem

./: .gitignore  CMakeLists.txt  Main.cpp
AppManage/: AppInteraction.cpp  AppManage.cpp  CMakeLists.txt
Application/: AppRegist.cpp  CMakeLists.txt  Registry.cpp
Application/Extender/: CMakeLists.txt
Application/Extender/TestApp/: TestApp.cpp
Application/SysApp/: CMakeLists.txt
Application/SysApp/NetWork/: NetResProc.cpp  NetWork.cpp
Application/SysApp/NetWork/protocol/tcp/: TSock.cpp
Application/SysApp/NetWork/protocol/udp/: USock.cpp
Global/: CMakeLists.txt
Global/Log/: Log.cpp
Global/mprint/: mprint.cpp
SysManage/: CMakeLists.txt  SysMange.cpp
include/Application/: TestApp.h
include/Global/: Log.h  mprint.h
include/NetWork/: MSocket.h  NetWork.h  TSock.h  USock.h
include/System/: AppManage.h  Application.h  Registry.h  SysManage.h
